# quarry-agent

./: Dockerfile  LICENSE  README.md  pyproject.toml  quarry.sh  tool-collection-manager.py
src/quarry/: __init__.py  local.py  utils.py
src/quarry/agent/: __init__.py  base.py
src/quarry/algorithm/: __init__.py  mcts.py
src/quarry/anthropic/: __init__.py  anthropic.py
src/quarry/chroma_db/: __init__.py  chroma_vector.py
src/quarry/crawl_service/: __init__.py  crawl.py
src/quarry/exceptions/: __init__.py
src/quarry/hf_agent/: __init__.py  hf_agent.py
src/quarry/ollama_agent/: __init__.py  ollama_agent.py
src/quarry/openai_agent/: __init__.py  openai_agent.py
src/quarry/resources/: prompts.py  react_prompt.md  reward_prompt.md
src/quarry/resources/scripts/: lexical_search.py  load_imports.py  run_sql_postgres.py.txt  run_sql_sqlite.py.txt
src/quarry/search/: __init__.py  base.py  world_model.py
src/quarry/types/: __init__.py
tests/: test_agent.py  test_utils.py
tests/expected_output/: interpreter_1.output  interpreter_2.output
